tests/rosetta/out/Zig/aliquot-sequence-classifications.error
zig build: exit status 1
/tmp/aliquot-sequence-classifications.zig:144:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/aliquot-sequence-classifications.zig:144:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
